--- a/src/container/task21.hbs
+++ b/src/container/task21.hbs
@@ -13,7 +13,7 @@
                                 Description: <b>{{text}}</b>
                             </p>
                             <br>
-                            {{#with button-text}}
+                            {{#with button_text}}
                                 <button class="btn btn-primary">
                                     {{solid}}
                                 </button>
@@ -39,7 +39,7 @@
                                     Description: <b>{{text}}</b>
                                 </p>
                                 <br>
-                                {{#with button-text}}
+                                {{#with button_text}}
                                     <button class="btn btn-secondary">
                                         {{solid}}
                                     </button>
@@ -66,7 +66,7 @@
                                     Description: <b>{{text}}</b>
                                 </p>
                                 <br>
-                                {{#with button-text}}
+                                {{#with button_text}}
                                     <button class="btn btn-dark">
                                         {{solid}}
                                     </button>
@@ -101,10 +101,10 @@
                             <p>
                                 Description: <b>{{text}}</b>
                             </p>
+                            {{#with button}}
                             <button class="btn btn-outline-warning">
-                                {{#with button}}
-                                    {{text}}
-                                {{/with}}
+                                {{text}}
+                            {{/with}}
                             </button>
                         {{/with}}
                     </div>
