--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,214 +1,94 @@
 <main>
-    <h1>Hello world!</h1>
-    <h2>Hello world!</h2>
-    <h3>Hello world!</h3>
-    <hr>
-    <div class="display-1">Hello world!</div>
-    <div class="display-5 text-muted">Hello world!</div>
-    <hr>
-    <div class="text-muted">Additional text</div>
-    <hr>
-    <button class="btn btn-warning btn-lg">Dark</button>
-    
-    <button class="btn btn-outline-primary">Dark</button>
+    <div class="row g-4">
 
-    <button class="btn btn-primary btn-sm">Dark</button>
-    <hr>
-    <p class="text-muted">Hoobaja</p>
-    <p class="text-dark">Dark</p>
-    <p class="text-primary text-uppercase">prima</p>
-    <hr>
-    <div class="card text-bg-dark">
-        <img class="card-img-tob" src="https://picsum.photos/1000/500" alt="Product photo">
-        <div class="card-body">
-            <h5 class="card-title">Product #3443</h5>
-            <p>Subwoofer</p>
-            <a href="/summary" class="btn btn-primary">Open</a>
+        <div class="col-12">
+            <div class="nav nav-tabs">
+                <div class="nav-item">
+                    <a href="#" class="nav-link active">Homepage</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Catalog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link disabled">FAQ</a>
+                </div>
+            </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-        <div class="card-body">
-            <button class="btn btn-warning btn-lg">Dark</button>
-    
-            <button class="btn btn-outline-primary">Dark</button>
 
-            <button class="btn btn-primary btn-sm">Dark</button>
+        <div class="col-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="nav flex-column">
+                        <div class="nav-item pt-2">
+                            <div class="card">
+                                <a href="#" class="nav-link">Homepage</a>
+                            </div>
+                        </div>
+                        <div class="nav-item pt-2">
+                            <div class="card">
+                                <a href="#" class="nav-link">Catalog</a>
+                            </div>
+                        </div>
+                        <div class="nav-item pt-2 pb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link disabled">FAQ</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-        <div class="card-header">
-            <div>Menu</div>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <a href="/" class="btn btn-link">Home</a>
-            </li>
-             <li class="list-group-item">
-                <a href="/summary" class="btn btn-link">Summary</a>
-            </li>
-             <li class="list-group-item">
-                <a href="/skills" class="btn btn-link">Skills</a>
-            </li>
-        </ul>
-        <div class="card-footer">
-            <button class="btn btn-dark btn-sm">Update list</button>
-        </div>
-    </div>
-    <br>
-    <br>
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>
-                    #id
-                </th>
-                <th>
-                    name
-                </th>
-                <th>
-                    age
-                </th>
-            </tr>
-        </thead>
 
-        <tbody>
-            <tr>
-                <th>
-                    1
-                </th>
-                <td>
-                    John
-                </td>
-                <td>
-                    35
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    2
-                </th>
-                <td>
-                    Josh
-                </td>
-                <td>
-                    18
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        <div class="col-8">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a href="#">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">PC and laptops</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Accessories</a>
+                </li>
+            </ol>
+        </div>
 
-    <br>
-    <br>
-    {{!-- <div class="card text-bg-success">
-        <div class="card-header">
-            <h6>Title</h6>
+        <div class="col-8">
+            <div class="row">
+                <div class="col-12">
+                     <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">PC and laptops</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            Accessories
+                        </li>
+                    </ol>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-            <div>Contents</div>
-        </div>
-    </div> --}}
-    <br>
 
-    <div class="row g-3">
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                <button class="btn btn-primary">
-                    Click!
-                </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
+        <div class="col-12">
+            <h6>Subwoofer <span class="badge text-bg-warning rounded-pill">NEW</span></h6>
+            <br>
+            <button class="btn btn-primary rounded-pill">Dubstep now!</button>
+            <br>
+            <br>
+            <div class="alert alert-primary">This is not a joke!</div>
         </div>
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                <button class="btn btn-primary">
-                    Click!
-                </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
+
+        <button class="btn btn-primary rounded-pill m-5">Dubstep now!</button>
+        <div class="alert alert-secondary">
+            <h6>Subwoofer <span class="badge text-bg-warning rounded-pill">NEW</span></h6>
+            <br>
+            <button class="btn btn-primary rounded-pill">Dubstep now!</button>
+            <br>
+            <br>
+            <div class="alert alert-primary">This is not a joke!</div>
         </div>
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                <button class="btn btn-primary">
-                    Click!
-                </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                <button class="btn btn-primary">
-                    Click!
-                </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                <button class="btn btn-primary">
-                    Click!
-                </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success col">
-                <div class="card-header">
-                    <h6 class="text-center">Title</h6>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Contents</p>
-                </div>
-                    <button class="btn btn-light btn-sm">
-                        Click!
-                    </button>
-                <div class="card-footer">
-                    <p>Footer</p>
-                </div>
-            </div>
-        </div>
+
     </div>
 </main>
