--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -1,59 +1,77 @@
 <main>
+
     <div class="row">
-        <section class="col-12">
+
+        <section>
             <nav>
                 {{#with navigation}}
-                    {{#each links}}
-                        <a class="btn btn-link" href="{{href}}">{{text}}</a>
-                    {{/each}}
-                    <a class="btn btn-primary" href="{{button.href}}">{{button.text}}</a>
+                    <div class="container">
+                        <div class="row">
+                            {{#each links}}
+                                <div class="col-2">
+                                    <a class="btn btn-link" href="{{href}}">{{text}}</a>
+                                </div>
+                            {{/each}}
+                            <div class="col-2">
+                                <a class="btn btn-primary" href="{{button.href}}">{{button.text}}</a>
+                            </div>
+                       </div>
+                    </div>
                 {{/with}}
             </nav>
             <hr>
         </section>
+
         <section>
             {{#with header}}
                 <h1>{{title}}</h1>
                 <p>{{description}}</p>
                 {{#with button}}
-                    <a class="btn btn-primary" href={{href}}>
+                    <a class="btn btn-primary mb-4" href={{href}}>
                         {{text}}
                     </a>
                 {{/with}}
             {{/with}}
             <hr>
         </section>
-        <section class="col-12">
-            <div class="row gx-2 gy-4">
+
+        <section>
+            <div>
                 {{#with city}}
-                    <h2>{{title}}</h2>
-                    {{#each cards}}
-                        <div class="card col-5">
-                            {{#with picture}}
-                                <img class="card-img-top" src={{src}} alt={{alt}}>
-                            {{/with}}
-                            <div class="card-header">
-                                <h3>{{title}}</h3>
-                            </div>
-                            <div class="card-body">
-                                <p>{{description}}</p>
-                                {{#with button}}
-                                    <a class="btn btn-link" href={{href}}>
-                                        {{text}}
-                                    </a>
-                                {{/with}}
-                            </div>
+                    <h2 class="mb-4">{{title}}</h2>
+                    <div class="container">
+                        <div class="row">
+                            {{#each cards}}
+                                <div class="card col-5 mx-2 my-3">
+                                    {{#with picture}}
+                                        <img class="card-img-top" src={{src}} alt={{alt}}>
+                                    {{/with}}
+                                    <div class="card-header">
+                                        <h3>{{title}}</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <p>{{description}}</p>
+                                        {{#with button}}
+                                            <a class="btn btn-link" href={{href}}>
+                                                {{text}}
+                                            </a>
+                                        {{/with}}
+                                    </div>
+                                </div>
+                            {{/each}}
                         </div>
-                    {{/each}}
+                    </div>
                 {{/with}}
             </div>
+            <br>
+            <hr>
         </section>
-        <hr>
+
         <section>
             {{#with winner}}
                 <h2>{{title}}</h2>
                 {{#with table}}
-                    <table class="table">
+                    <table class="table mb-5">
                         <thead>
                             <tr>
                                 {{#each head}}
@@ -86,97 +104,155 @@
             {{/with}}
             <hr>
         </section>
+
         <section>
             {{#with gallery}}
-                <h2>{{title}}</h2>
-                {{#each cards}}
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>{{name}}</h3>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            {{#each items}}
-                                <li class="list-group-item">{{this}}</li>
-                            {{/each}}
-                        </ul>
+                <h2 class="mb-4">{{title}}</h2>
+                <div class="container">
+                    <div class="row">
+                        {{#each cards}}
+                            <div class="col-4">
+                                <div class="card mb-5">
+                                    <div class="card-header">
+                                        <h3>{{name}}</h3>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        {{#each items}}
+                                            <li class="list-group-item">{{this}}</li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                            </div>
+                        {{/each}}
                     </div>
-                {{/each}}
+                </div>
             {{/with}}
             <hr>
         </section>
+
         <section>
             {{#with relaxation}}
                 <p class="display-3">{{title}}</p>
-                    {{#each cards}}
-                        <div class="card">
-                            <div class="card-header">
-                                {{header}}
+                <div class="container">
+                    <div class="row">
+                        {{#each cards}}
+                            <div class="col-5">
+                                <div class="card mb-5">
+                                    <div class="card-header">
+                                        {{header}}
+                                    </div>
+                                    <div class="card-body">
+                                        <h2>{{title}}</h2>
+                                        <p>{{description}}</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                <h2>{{title}}</h2>
-                                <p>{{description}}</p>
-                            </div>
-                        </div>
-                    {{/each}}
+                        {{/each}}
+                    </div>
+                </div>
             {{/with}}
             <hr>
         </section>
+
         <section>
             {{#with rest}}
                 <p class="display-3">{{title}}</p>
-                {{#each cards}}
-                    <div class="card">
-                        <div class="card-header text-center">
-                            {{header}}
-                        </div>
-                        <div class="card-body text-center">
-                            <h3>{{title}}</h3>
-                            <p>{{description}}</p>
-                            <button class="btn btn-primary text ">
-                                {{button}}
-                            </button>
-                        </div>
-                        <div class="card-footer text-center">
-                            {{footer}}
-                        </div>
+                <div class="container">
+                    <div class="row">
+                        {{#each cards}}
+                            <div class="col-6">
+                                <div class="card mb-5">
+                                    <div class="card-header text-center">
+                                        {{header}}
+                                    </div>
+                                    <div class="card-body text-center">
+                                        <h3>{{title}}</h3>
+                                        <p>{{description}}</p>
+                                        <button class="btn btn-primary text ">
+                                            {{button}}
+                                        </button>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        {{footer}}
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
                     </div>
-                {{/each}}
+                </div>
             {{/with}}
             <hr>
         </section>
+        
         <section>
             {{#with proposition}}
                 <p class="display-2">{{title}}</p>
-                {{#each cards}}
-                    <div class="card text-bg-warning text-light">
-                        <div class="card-header">
-                            {{header}}
-                        </div>
-                        <div class="card-body">
-                            <h3>{{title}}</h3>
-                            <p>{{description}}</p>
-                        </div>
+                <div class="container">
+                    <div class="row">
+                        {{#each cards}}
+                            <div class="col-5">
+                                <div class="card text-bg-warning text-light mb-5">
+                                    <div class="card-header">
+                                        {{header}}
+                                    </div>
+                                    <div class="card-body">
+                                        <h3>{{title}}</h3>
+                                        <p>{{description}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
                     </div>
-                {{/each}}
+                </div>
             {{/with}}
             <hr>
         </section>
+ 
         <section>
             {{#with footer}}
-                <div class="display-6">
-                    {{title}}
+                <div>
+                    <h5>{{title}}</h5>
                 </div>
-                {{#each navigation}}
-                    <a class="btn btn-link" href={{href}}>
-                        {{text}}
-                    </a>
-                {{/each}}
-                {{#each socialMedia}}
-                    <a class="btn btn-link" href={{href}}>
-                        {{text}}
-                    </a>
-                {{/each}}
+                <div class="container">
+                    <div class="row">
+                        {{#each navigation}}
+                            <div class="col-4">
+                                <div class="nav flex-column">
+                                    <div class="nav-item pt-3">
+                                        <a class="btn btn-link" href={{href}}>
+                                            {{text}}
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+                        {{#each socialMedia}}
+                            <div class="col-4">
+                                <div class="nav flex-column">
+                                    <div class="nav-item pt-3">
+                                        <a class="btn btn-outline-dark" href={{link}}>
+                                            {{name}}
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+                        {{#each partners}}
+                            <div class="col-4">
+                                <div class="nav flex-column">
+                                    <div class="nav-item pt-3">
+                                        <a class="btn btn-outline-info" href={{link}}>
+                                            {{name}}
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+                    </div>   
+                </div> 
             {{/with}}
         </section>
+
     </div>
 </main>
+
