--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,9 @@
 html {
-  max-width: 1000px;
+  max-width: none;
 }
 
 body {
-  margin: 32px;
   background: #fff;
-}
-
-main,
-header,
-footer,
-nav {
-  margin: 32px;
 }
 
 section {
