--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -114,5 +114,18 @@
         {{/each}}
     </div>
 
+    <div class="row">
+        <hr>
+        {{#each footer}}
+            <div class="col-2">
+                {{#each this}}
+                    <div class="mt-3">
+                        <a class="btn btn-link {{#if @last}} disabled {{/if}}" href="{{href}}"> {{text}} </a>
+                    </div>
+                {{/each}}
+            </div>
+        {{/each}}
+    </div>
+
     
 </main>
