almost finished task with shopproduct, the only proolem is with the actionList

--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -102,16 +102,17 @@
     {{/with}}
 
     {{#with goodsOtherBlock}}
-        <div>
+        <div class="my-5">
             <h2 class="text-center">{{title}}</h2>
             <div class="row">
-                {{>shop-card}}
+                {{> shop-card}}
             </div>
         </div>
         <hr>
-        <div>
-            
-        </div>
     {{/with}}
- 
+
+    <div>
+        {{> shop-action}}
+    </div>
+
 </div>
