--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -1,5 +1,4 @@
 <main>
-
     <div class="card m-5">
         {{#with navigation}}
             <ul class="nav p-2">
@@ -39,7 +38,6 @@
     </div>
     
     <div>
-
         {{#with goodsBlock}}
             <ul class="nav nav-tabs my-5">
                 {{#each tabs}}
@@ -51,23 +49,7 @@
 
             <div class="container mb-5">
                 <div class="row">
-                    {{#each cards}}
-                        <div class="card col-4 my-2">
-                            <img class="card-img-top" src={{image}} alt="Product photo">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    {{title}}
-                                    {{#if isHot}}
-                                        <span class="badge text-bg-warning">Hot</span>
-                                    {{/if}}
-                                    {{#if isNew}}
-                                        <span class="badge text-bg-primary">New</span>
-                                    {{/if}}
-                                </h5>
-                                <p>{{description}}</p>
-                            </div>
-                        </div>
-                    {{/each}}
+                   {{> shop-card}}
                 </div>
             </div>
             <hr>
@@ -86,44 +68,7 @@
          {{/with}}
     </div>
     <hr>
-
-    <div class="alert alert-success my-5">
-         {{#with service}}
-            <h2 class="text-center">{{title}}</h2>
-            <p class="text-center">{{description}}</p>
-            {{#each buttons}}
-                <div class="row">
-                    <div class="text-center">
-                        <button class="btn btn-primary col-2 m-3" href={{link}}>{{text}}</button>
-                    </div>
-               </div>
-            {{/each}}
-         {{/with}}
-    </div>
+    {{> shop-action}}
     <hr>
-
-    <div>
-        {{#each footer}}
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" href={{link}}>{{text}}</a>
-                </li>
-            </ul>
-        {{/each}}
-    </div>
-
-    <div class="row">
-        <hr>
-        {{#each footer}}
-            <div class="col-2">
-                {{#each this}}
-                    <div class="mt-3">
-                        <a class="btn btn-link {{#if @last}} disabled {{/if}}" href="{{href}}"> {{text}} </a>
-                    </div>
-                {{/each}}
-            </div>
-        {{/each}}
-    </div>
-
-    
+    {{> shop-footer}} 
 </main>
