--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -15,7 +15,7 @@
 
   <body> 
     {{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   --}}
-    {{> shop-nav}}
+    {{> shop-header}}
     {{{body}}}
     {{> shop-footer}}
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
