finished task shoporder

--- a/src/component/shop-footer.hbs
+++ b/src/component/shop-footer.hbs
@@ -1,3 +1,4 @@
+<div class="ms-5">
   <div>
         {{#each footer}}
             <ul class="nav flex-column">
@@ -20,3 +21,4 @@
             </div>
         {{/each}}
     </div>
+</div>
