--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -1,4 +1,5 @@
 <main>
+
     <div class="row">
 
         <div class="col-8">
@@ -12,64 +13,136 @@
                         </button>
                     {{/each}}
                 </div>
-                {{#with form}}
-                    {{#with input}}
-
-                        {{#with surname}}
-                            <div class="col-4 ms-5 mt-3">
-                                <form>
-                                    <div class="mb-3">
-                                        <label class="form-label">{{label}}</label>
-                                        <input class="form-control" placeholder="{{placeholder}}">
-                                        <div class="form-text">{{caption}}</div>
-                                    </div>
-                                </form>
+                <div class="row">
+                    {{#with form}}
+                        {{#with input}}
+                            <div class="ms-5">
+                                {{> shop-contact}}
                             </div>
                         {{/with}}
 
-                        {{#with name}}
-                            <div class="col-4 ms-5">
-                                <form>
-                                    <div class="mb-3">
-                                        <label class="form-label">{{label}}</label>
-                                        <input class="form-control" placeholder="{{placeholder}}">
-                                        <div class="form-text">{{caption}}</div>
-                                    </div>
-                                </form>
-                            </div>
-                        {{/with}}
-
-                        {{#with phone}}
-                            <div class="col-4 ms-5">
-                                <form>
-                                    <div class="mb-3">
-                                        <label class="form-label">{{label}}</label>
-                                        <input class="form-control" placeholder="{{placeholder}}">
-                                        <div class="form-text">{{caption}}</div>
-                                    </div>
-                                </form>
-                            </div>
-                        {{/with}}
-
-                        {{#with email}}
-                            <div class="col-4 ms-5">
-                                <form>
-                                    <div class="mb-3">
-                                        <label class="form-label">{{label}}</label>
-                                        <input class="form-control" placeholder="{{placeholder}}">
-                                        <div class="form-text">{{caption}}</div>
-                                    </div>
-                                </form>
-                            </div>
-                        {{/with}}
+                        <hr class="ms-5">
                         
+                        {{#each switch}}
+                            <div class="form-check form-switch ms-5 mt-3">
+                                <input class="form-check-input" type="checkbox" role="switch">
+                                <label class="form-check-label">{{text}}</label>
+                            </div>
+                        {{/each}}
+
+                        <hr class="ms-5 mt-4">
+
                     {{/with}}
 
-                {{/with}}
+                </div>
 
             {{/with}}
-           
+
+            {{#with delivery}}
+                <h2 class="ms-5">{{title}}</h2>
+                <div class="card ms-5 mt-3 p-3">
+                    <div class="row">
+                        {{#each select}}
+                            <div class="col-6">
+                                <label class="mb-2">{{label}}</label>
+                                <select class="form-select">
+                                    <option selected>{{placeholder}}</option>
+                                    {{#each options}}
+                                        <option value="{{value}}">{{text}}</option>
+                                    {{/each}}
+                                </select>
+                            </div>
+                        {{/each}}
+                    </div>
+                </div>
+                <div class="ms-5 mt-4">
+                    {{#each delivery_type}}
+                        <div class="form-check mb-2">
+                            <input class="form-check-input" type="radio" name="delivery_type">
+                            <label class="form-check-label">
+                                {{type}}
+                            </label>
+                        </div>
+                    {{/each}}
+                </div>
+                <hr class="ms-5 mt-4">
+                <div class="ms-5">
+                    {{#with payment}}
+                        <h2>{{title}}</h2>
+                        {{#each list}}
+                            <div class="form-check my-3">
+                                <input class="form-check-input" type="radio" name="payment_type">
+                                <label class="form-check-label">
+                                    {{type}}
+                                </label>
+                                {{#if description}}
+                                    <div class="form-text">{{description}}</div>
+                                {{/if}}
+                            </div>
+                        {{/each}}
+                    {{/with}}
+                </div>
+                <hr class="ms-5 mt-4">
+                <div class="ms-5">
+                    {{#with contact}}
+                        <h2>{{title}}</h2>
+                        <div class="row">
+                            {{> shop-contact}}
+                        </div>
+                    {{/with}}
+                </div>
+                <hr class="ms-5 mt-4">
+                <div class="ms-5">
+                    {{#with comment}}
+                        <form>
+                            <label for="exampleInputEmail1" class="form-label">{{label}}</label>
+                            <input type="email" class="form-control" placeholder="{{placeholder}}">
+                        </form>
+                    {{/with}}
+                </div>
+                <hr class="ms-5 mt-4">
+            {{/with}}
+
+        </div>
+
+        <div class="col-4 mt-4">
+
+            <div class="card p-2 mb-3">
+                {{#each action_block}}
+                    <button class="btn {{#if isSuccess}} btn-success {{/if}} {{#if isDanger}} btn-danger {{/if}} {{#if isInfo}} btn-info {{/if}} m-1 text-start">
+                        {{text}}
+                    </button>
+                {{/each}}
+            </div>
+
+            <div class="card mb-3 p-3">
+                {{#with total}}
+                    <h2>{{title}}</h2>
+                    {{#each item_list}}
+                        <li>
+                            {{name}} : {{price}}
+                        </li>
+                    {{/each}}
+                    <hr>
+                    {{#each additional_info}}
+                        <li>
+                            {{text}} : {{value}}
+                        </li>
+                    {{/each}}
+                    <hr>
+                    {{#with total_price}}
+                        {{text}} : {{value}}
+                    {{/with}}
+                    <hr>
+                    {{#each button}}
+                        <button class="btn {{#if isPrimary}} btn-primary {{/if}} {{#if isOutline}} btn-outline-primary {{/if}} m-1 text-start">
+                            {{text}}
+                        </button>
+                    {{/each}}
+                {{/with}}
+            </div>
         </div>
 
     </div>
+
 </main>
