--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,9 @@ html {
 }
 
 body {
-  background: #ffffff;
+  
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+ 
 }
 
 section {
