almost finished my pet-project, remaining only a couple of webpages to lay outD

--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,5 +1,5 @@
 <main>
-    <div class="row g-4">
+    <div class="row m-3">
 
         <div class="col-12">
             <div class="nav nav-tabs">
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="col-8">
+        <div class="col-8 my-4">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                     <a href="#">Home</a>
@@ -53,7 +53,7 @@
             </ol>
         </div>
 
-        <div class="col-8">
+        <div class="col-8 my-4">
             <div class="row">
                 <div class="col-12">
                      <ol class="breadcrumb">
@@ -80,8 +80,8 @@
             <div class="alert alert-primary">This is not a joke!</div>
         </div>
 
-        <button class="btn btn-primary rounded-pill m-5">Dubstep now!</button>
-        <div class="alert alert-secondary">
+        <button class="btn btn-primary rounded-pill">Dubstep now!</button>
+        <div class="alert alert-secondary my-4">
             <h6>Subwoofer <span class="badge text-bg-warning rounded-pill">NEW</span></h6>
             <br>
             <button class="btn btn-primary rounded-pill">Dubstep now!</button>
